# aestivus

./: .gitignore  MVZ_DEBUG_REPORT.md  MVZ_UI_IMPROVEMENTS.md  README.md  Taskfile.yml  build.py  mvz_404_fix_summary.md  mvz_smart_expansion.md  mvz节点集成说明.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  图片元数据功能集成说明.md
.github/workflows/: build.yml  build.yml.disabled  release.yml
docs/: DESIGN.md  IMPLEMENTATION_GUIDE.md  REACT_MIGRATION_EVALUATION.md  README.md  TECH_EVALUATION.md  TODO.md  TOOL_RUNTIME.md
src/: app.css
src-python/: bridge.py  launcher.py  main.py  pyproject.toml  requirements.txt
src-python/adapters/: __init__.py  bandia_adapter.py  base.py  cleanf_adapter.py  crashu_adapter.py  dissolvef_adapter.py  encodeb_adapter.py  findz_adapter.py  formatv_adapter.py  kavvka_adapter.py  lata_adapter.py  marku_adapter.py  migratef_adapter.py  movea_adapter.py  mvz_adapter.py  rawfilter_adapter.py  repacku_adapter.py  rule.md  seriex_adapter.py  sleept_adapter.py  trename_adapter.py  weibospider_adapter.py  weibospider_utils.py
src-python/aestiv/: __init__.py  __main__.py  cli.py  node_cli.py
src-python/api/: execution.py  files.py  flows.py  nodes.py  storage.py  tasks.py  terminal_ws.py  tools.py  websocket.py
src-python/db/: __init__.py  database.py  models.py
src-python/storage/: __init__.py
src-python/tests/: check_ws_paths.py  test_bandia_export.py  test_flow_error_handling.py  test_flow_serialization.py  test_repacku_progress.py  test_storage_api.py  test_topological_sort.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  py_bridge.rs
src/lib/api/: devMode.ts  platform.ts
src/lib/components/blocks/: BlockCard.svelte  NodeLayoutRenderer.svelte  README.md  TabBlockCard.svelte  TabConfigPanel.svelte  TabGroupCard.svelte  blockRegistry.ts  index.ts
src/lib/components/execution/: LogViewer.svelte
src/lib/components/flow/: CanvasContextMenu.svelte  FloatingPalette.svelte  FloatingToolbar.svelte  FlowCanvas.svelte  FlowToolbar.svelte  FullscreenNodeModal.svelte  NodeContextMenu.svelte  NodeEditor.svelte  NodePalette.svelte  NodeTreePalette.svelte  TitleBar.svelte
src/lib/components/fullscreen/: RepackuFullscreen.svelte  TrenameFullscreen.svelte
src/lib/components/input/: PathInput.svelte  index.ts
src/lib/components/layout/: AutoHideTitleBar.svelte  HoverWrapper.svelte  LeftSidebar.svelte  TitleBar.svelte
src/lib/components/nodes/: BaseNode.svelte  CrashuNode.svelte  EngineVNode.svelte  InputNode.svelte  NodePaletteNode.svelte  NodeWrapper.svelte  OutputNode.svelte  RawfilterNode.svelte  RepackuNode.svelte  TerminalNode.svelte  ToolNode.svelte  TrenameNode.svelte  enginev-utils.ts  index.ts
src/lib/components/nodes/bandia/: BandiaNode.svelte
src/lib/components/nodes/cleanf/: CleanfNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/crashu/: CrashuNode.svelte
src/lib/components/nodes/dissolvef/: DissolvefNode.svelte  blocks.ts
src/lib/components/nodes/encodeb/: EncodebNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/enginev/: EngineVNode.svelte  utils.ts
src/lib/components/nodes/findz/: AdvancedFilters.svelte  AnalysisPanel.svelte  BasicFilters.svelte  FilterBuilder.svelte  FilterTypes.ts  FindzNode.svelte  PresetManager.svelte  blocks.ts  filterLogic.ts  hooks.ts  index.ts  types.ts
src/lib/components/nodes/formatv/: FormatVNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/kavvka/: KavvkaNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/lata/: LataNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/linedup/: LinedupNode.svelte
src/lib/components/nodes/linku/: LinkuNode.svelte
src/lib/components/nodes/marku/: MarkuNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/migratefnode/: MigrateFNode.svelte
src/lib/components/nodes/movea/: MoveaNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/mvz/: MvzNode.svelte  blocks.ts  index.ts  treeUtils.ts  types.ts
src/lib/components/nodes/owithu/: OwithuNode.svelte
src/lib/components/nodes/rawfilter/: RawfilterNode.svelte
src/lib/components/nodes/recycleu/: RecycleuNode.svelte
src/lib/components/nodes/reinstallp/: ReinstallpNode.svelte
src/lib/components/nodes/repacku/: RepackuNode.svelte
src/lib/components/nodes/scoolp/: ScoolpNode.svelte
src/lib/components/nodes/seriex/: SeriexNode.svelte  blocks.ts  index.ts
src/lib/components/nodes/sleept/: SleeptNode.svelte  blocks.ts
src/lib/components/nodes/terminal/: TerminalNode.svelte
src/lib/components/nodes/trename/: TrenameNode.svelte  blocks.ts  utils.ts
src/lib/components/nodes/weibospider/: WeiboSpiderNode.svelte  blocks.ts  index.ts
src/lib/components/settings/: BackupSettingsPanel.svelte  BlockSettingsPanel.svelte  DataSettingsPanel.svelte  DevSettingsPanel.svelte  GistSyncPanel.svelte  SettingsContent.svelte  SettingsOverlay.svelte  ThemeSettingsPanel.svelte
src/lib/components/ui/: CircularProgress.svelte
src/lib/components/ui/animated-dropdown/: AnimatedDropdown.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/checkbox/: checkbox.svelte  index.ts
src/lib/components/ui/circular-progress-bar/: CircularProgressBar.svelte  index.ts
src/lib/components/ui/context-menu/: context-menu-content.svelte  index.ts  (+2 more)
src/lib/services/: api.ts  platform.ts  storageClient.ts
src/lib/settings/: settingsManager.ts
src/lib/stores/: autoBackup.svelte.ts  backend.ts  blockConfig.svelte.ts  dockStore.svelte.ts  flowStore.ts  fullscreenNode.svelte.ts  gistSync.svelte.ts  index.ts  layoutPresets.ts  nodeLayoutStore.ts  nodeRegistry.ts  nodeState.svelte.ts  nodeStateStore.ts  sidebar.svelte.ts  taskStore.ts  theme.svelte.ts  unifiedTabStore.ts
src/lib/styles/: container-responsive.css  scrollbar.css
src/lib/types/: flow.ts  index.ts  task.ts
src/lib/utils/: sizeUtils.ts  themeManager.ts  treeUtils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/flow/[id]/: +page.svelte
src/routes/node/[name]/: +page.svelte
(+16 files in other folders)
