[project]
name = "aestival-backend"
version = "0.1.0"
description = "AestivalFlow Python 后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HibernalGlow"}
]
dependencies = [
    # Web 框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    
    # HTTP 客户端
    "httpx>=0.25.2",
    "requests>=2.31.0",
    
    # 剪贴板支持
    "pyperclip>=1.8.0",
    
    # 日志
    "loguru>=0.7.0",
    
    # 工具适配器依赖 (从 GitHub 安装)
    "autorepack @ git+https://github.com/HibernalGlow/AutoRepack.git",
    "imagefilter @ git+https://github.com/HibernalGlow/ImageFilter.git",
    "previewa @ git+https://github.com/HibernalGlow/ArtistPreview.git",
    "nameu @ git+https://github.com/HibernalGlow/NameU.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "nuitka>=2.0",
    "hypothesis>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adapters", "api", "core", "models", "storage", "config"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.toml"]

# Nuitka 打包配置
[tool.nuitka]
name = "main"
onefile = true
standalone = true

# 需要包含的模块（Nuitka 的 --include-module）
include-modules = [
    # 适配器模块
    "adapters",
    "adapters.base",
    "adapters.repacku_adapter",
    "adapters.rawfilter_adapter",
    "adapters.crashu_adapter",
    "adapters.trename_adapter",
    
    # repacku 依赖
    "repacku",
    "repacku.cli",
    "repacku.core",
    "repacku.core.folder_analyzer",
    "repacku.core.zip_compressor",
    "repacku.core.single_packer",
    "repacku.core.common_utils",
    "repacku.config",
    "repacku.config.config",
    
    # rawfilter 依赖
    "rawfilter",
    "rawfilter.__main__",
    
    # crashu 依赖
    "crashu",
    "crashu.__main__",
    "crashu.core",
    "crashu.core.folder_manager",
    "crashu.core.output_manager",
    
    # trename 依赖
    "trename",
    "trename.scanner",
    "trename.renamer",
    "trename.undo",
    "trename.models",
    "trename.validator",
    
    # FastAPI/uvicorn 内部模块
    "uvicorn.logging",
    "uvicorn.loops",
    "uvicorn.loops.auto",
    "uvicorn.protocols",
    "uvicorn.protocols.http",
    "uvicorn.protocols.http.auto",
    "uvicorn.protocols.websockets",
    "uvicorn.protocols.websockets.auto",
    "uvicorn.lifespan",
    "uvicorn.lifespan.on",
]

# 需要包含的包（Nuitka 的 --include-package）
include-packages = [
    "fastapi",
    "starlette",
    "pydantic",
    "pydantic_core",
    "uvicorn",
    "loguru",
    "rich",
    "typer",
]

# 排除的模块
nofollow-imports = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tkinter",
    "PyQt5",
    "PyQt6",
]
