[project]
name = "aestiv"
version = "0.0.3"
description = "Aestivus Python 后端服务"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "HibernalGlow"}
]
dependencies = [
    # Web 框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # 数据库
    "sqlmodel>=0.0.22",
    # HTTP 客户端
    "httpx>=0.25.2",
    "requests>=2.31.0",
    # 剪贴板支持
    "pyperclip>=1.8.0",
    # 日志
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# 工具适配器依赖（可选，避免覆盖本地开发版本）
# 基础安装: pip install aestiv
# 完整安装: pip install aestiv[tools]
tools = [
    "autorepack @ git+https://github.com/HibernalGlow/AutoRepack.git",
    "imagefilter @ git+https://github.com/HibernalGlow/ImageFilter.git",
    "previewa @ git+https://github.com/HibernalGlow/ArtistPreview.git",
    "nameu @ git+https://github.com/HibernalGlow/NameU.git",
    "trename @ git+https://github.com/HibernalGlow/trename.git",
    "enginev @ git+https://github.com/HibernalGlow/EngineV.git",
]
dev = [
    "pytest>=7.4.3",
    "hypothesis>=6.0.0",
]

[project.scripts]
# aestiv: 仅启动后端 API 服务
aestiv = "aestiv.cli:run_backend"
# aestiva: 同时启动后端 + 前端开发服务器
aestiva = "aestiv.cli:run_full"
# anode: 快速启动单个 node
anode = "aestiv.node_cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aestiv", "adapters", "api", "core", "models", "storage", "config", "db"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.toml"]
