[package]
name = "aestivus"
version = "0.0.1"
description = "Python工具链可视化编排与执行平台"
authors = ["HibernalGlow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aestivus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"  # 获取系统目录路径

# 本地 release：快速编译
[profile.release]
strip = true
opt-level = 2         # 平衡优化，编译较快
lto = "thin"          # 轻量 LTO，编译快
codegen-units = 16    # 多单元并行编译
panic = "abort"
debug = false

# CI 专用：极致性能优化（cargo build --profile ci-release）
[profile.ci-release]
inherits = "release"
opt-level = 3         # 最高优化级别
lto = "fat"           # 完整 LTO，跨 crate 深度优化
codegen-units = 1     # 单代码生成单元，最大化优化
overflow-checks = false  # 禁用溢出检查

[profile.ci-release.build-override]
opt-level = 3
